chore! fix folder structure
Signed-off-by: Diogo Jorge Basso <65865529+diogojorgebasso@users.noreply.github.com>

--- a/Train for the Test/ex1.ipynb
+++ b/Train for the Test/ex1.ipynb
@@ -2,9 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "setwd(\"C:/Users/diogo/code/Analyse de Donne/Train for the Test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
-   "id": "ce034020-5828-4ca1-91cf-d23b4f0b080f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -294,11 +310,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a5dfa578-3cf7-421e-be1c-b2feb2e47b31",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "  Sepal.Length    Sepal.Width     Petal.Length    Petal.Width   \n",
+       " Min.   :4.300   Min.   :2.000   Min.   :1.000   Min.   :0.100  \n",
+       " 1st Qu.:5.100   1st Qu.:2.800   1st Qu.:1.600   1st Qu.:0.300  \n",
+       " Median :5.800   Median :3.000   Median :4.350   Median :1.300  \n",
+       " Mean   :5.843   Mean   :3.057   Mean   :3.758   Mean   :1.199  \n",
+       " 3rd Qu.:6.400   3rd Qu.:3.300   3rd Qu.:5.100   3rd Qu.:1.800  \n",
+       " Max.   :7.900   Max.   :4.400   Max.   :6.900   Max.   :2.500  \n",
+       "       Species  \n",
+       " setosa    :50  \n",
+       " versicolor:50  \n",
+       " virginica :50  \n",
+       "                \n",
+       "                \n",
+       "                "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "summary(iris)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Corelação de Person"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tPearson's product-moment correlation\n",
+       "\n",
+       "data:  iris$Sepal.Length and iris$Sepal.Width\n",
+       "t = -1.4403, df = 148, p-value = 0.1519\n",
+       "alternative hypothesis: true correlation is not equal to 0\n",
+       "95 percent confidence interval:\n",
+       " -0.27269325  0.04351158\n",
+       "sample estimates:\n",
+       "       cor \n",
+       "-0.1175698 \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cor_test_sepal <- cor.test(iris$Sepal.Length, iris$Sepal.Width)\n",
+    "cor_test_sepal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O valor de p-value (0.1519) é maior que 0.05, o que significa que não há evidência suficiente para rejeitar a hipótese nula (H0). A hipótese nula nesse caso afirma que não há correlação entre Sepal.Length e Sepal.Width."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tPearson's product-moment correlation\n",
+       "\n",
+       "data:  iris$Petal.Length and iris$Petal.Width\n",
+       "t = 43.387, df = 148, p-value < 2.2e-16\n",
+       "alternative hypothesis: true correlation is not equal to 0\n",
+       "95 percent confidence interval:\n",
+       " 0.9490525 0.9729853\n",
+       "sample estimates:\n",
+       "      cor \n",
+       "0.9628654 \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cor_test_sepal <- cor.test(iris$Petal.Length, iris$Petal.Width)\n",
+    "cor_test_sepal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Há uma correlação positiva muito forte entre o comprimento e a largura das pétalas, o que faz sentido do ponto de vista biológico, já que essas dimensões provavelmente crescem juntas em muitas espécies de flores, incluindo as do dataset iris."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Análise em Componentes Principais (ACP)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agora, realizamos uma ACP (Análise em Componentes Principais) com as variáveis adequadas (normalmente as quantitativas). Vamos eliminar a variável Species para focar nas variáveis numéricas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "library(FactoMineR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Call:\n",
+      "PCA(X = iris_data, scale.unit = TRUE) \n",
+      "\n",
+      "\n",
+      "Eigenvalues\n",
+      "                       Dim.1   Dim.2   Dim.3   Dim.4\n",
+      "Variance               2.918   0.914   0.147   0.021\n",
+      "% of var.             72.962  22.851   3.669   0.518\n",
+      "Cumulative % of var.  72.962  95.813  99.482 100.000\n",
+      "\n",
+      "Individuals (the 10 first)\n",
+      "                 Dist    Dim.1    ctr   cos2    Dim.2    ctr   cos2    Dim.3\n",
+      "1            |  2.319 | -2.265  1.172  0.954 |  0.480  0.168  0.043 | -0.128\n",
+      "2            |  2.202 | -2.081  0.989  0.893 | -0.674  0.331  0.094 | -0.235\n",
+      "3            |  2.389 | -2.364  1.277  0.979 | -0.342  0.085  0.020 |  0.044\n",
+      "4            |  2.378 | -2.299  1.208  0.935 | -0.597  0.260  0.063 |  0.091\n",
+      "5            |  2.476 | -2.390  1.305  0.932 |  0.647  0.305  0.068 |  0.016\n",
+      "6            |  2.555 | -2.076  0.984  0.660 |  1.489  1.617  0.340 |  0.027\n",
+      "7            |  2.468 | -2.444  1.364  0.981 |  0.048  0.002  0.000 |  0.335\n",
+      "8            |  2.246 | -2.233  1.139  0.988 |  0.223  0.036  0.010 | -0.089\n",
+      "9            |  2.592 | -2.335  1.245  0.812 | -1.115  0.907  0.185 |  0.145\n",
+      "10           |  2.249 | -2.184  1.090  0.943 | -0.469  0.160  0.043 | -0.254\n",
+      "                ctr   cos2  \n",
+      "1             0.074  0.003 |\n",
+      "2             0.250  0.011 |\n",
+      "3             0.009  0.000 |\n",
+      "4             0.038  0.001 |\n",
+      "5             0.001  0.000 |\n",
+      "6             0.003  0.000 |\n",
+      "7             0.511  0.018 |\n",
+      "8             0.036  0.002 |\n",
+      "9             0.096  0.003 |\n",
+      "10            0.293  0.013 |\n",
+      "\n",
+      "Variables\n",
+      "                Dim.1    ctr   cos2    Dim.2    ctr   cos2    Dim.3    ctr\n",
+      "Sepal.Length |  0.890 27.151  0.792 |  0.361 14.244  0.130 | -0.276 51.778\n",
+      "Sepal.Width  | -0.460  7.255  0.212 |  0.883 85.247  0.779 |  0.094  5.972\n",
+      "Petal.Length |  0.992 33.688  0.983 |  0.023  0.060  0.001 |  0.054  2.020\n",
+      "Petal.Width  |  0.965 31.906  0.931 |  0.064  0.448  0.004 |  0.243 40.230\n",
+      "               cos2  \n",
+      "Sepal.Length  0.076 |\n",
+      "Sepal.Width   0.009 |\n",
+      "Petal.Length  0.003 |\n",
+      "Petal.Width   0.059 |\n"
+     ]
+    }
+   ],
+   "source": [
+    "iris_data <- iris[, 1:4] # Selecionar as variáveis quantitativas\n",
+    "pca_result <- PCA(iris_data, scale.unit = TRUE)\n",
+    "\n",
+    "summary(pca_result)"
+   ]
   }
  ],
  "metadata": {
@@ -317,5 +546,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
