--- a/Class 6/poissons/poissons.ipynb
+++ b/Class 6/poissons/poissons.ipynb
@@ -131,14 +131,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "537fa738",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error: objeto 'poissons' não encontrado\n",
+     "output_type": "error",
+     "traceback": [
+      "Error: objeto 'poissons' não encontrado\nTraceback:\n",
+      "1. lapply(X = X, FUN = FUN, ...)",
+      "2. .handleSimpleError(function (cnd) \n . {\n .     watcher$capture_plot_and_output()\n .     cnd <- sanitize_call(cnd)\n .     watcher$push(cnd)\n .     switch(on_error, continue = invokeRestart(\"eval_continue\"), \n .         stop = invokeRestart(\"eval_stop\"), error = invokeRestart(\"eval_error\", \n .             cnd))\n . }, \"objeto 'poissons' não encontrado\", base::quote(eval(expr, \n .     envir)))"
+     ]
+    }
+   ],
    "source": [
     "anova_results <- sapply(poissons[, -1], function(x) {\n",
     "  summary(aov(x ~ poissons$site))[[1]][[\"Pr(>F)\"]][1]\n",
