chore: transform class 5 to ipynb

--- a/Class 5/Villes/villes.ipynb
+++ b/Class 5/Villes/villes.ipynb
@@ -1013,6 +1013,29 @@
     "acpmeteo <- PCA(meteo1, scale.unit = TRUE)\n",
     "summary(acpmeteo)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NULL"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cah.ward$desc.var"
+   ]
   }
  ],
  "metadata": {
