--- a/Class 7/ex1.ipynb
+++ b/Class 7/ex1.ipynb
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -823,7 +823,7 @@
     }
    ],
    "source": [
-    "params <- list(support = 0.1, confidence = 0.8, minlen = 2)\n",
+    "params <- list(support = 0.1, confidence = 0.8, minlen = 2, maxlen=100, target=\"frequent itemsets\") \n",
     "itemsets <- apriori(adults, parameter = params)"
    ]
   },
