--- a/Test 2020/test2020.ipynb
+++ b/Test 2020/test2020.ipynb
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -999,15 +999,14 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "classes\n",
-       " 1  2  3 \n",
-       "50 64 36 "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ERROR",
+     "evalue": "Error: objeto 'hc_iris' não encontrado\n",
+     "output_type": "error",
+     "traceback": [
+      "Error: objeto 'hc_iris' não encontrado\nTraceback:\n",
+      "1. nrow(tree$merge)",
+      "2. .handleSimpleError(function (cnd) \n . {\n .     watcher$capture_plot_and_output()\n .     cnd <- sanitize_call(cnd)\n .     watcher$push(cnd)\n .     switch(on_error, continue = invokeRestart(\"eval_continue\"), \n .         stop = invokeRestart(\"eval_stop\"), error = invokeRestart(\"eval_error\", \n .             cnd))\n . }, \"objeto 'hc_iris' não encontrado\", base::quote(eval(expr, \n .     envir)))"
+     ]
     }
    ],
    "source": [
