--- a/main.ipynb
+++ b/main.ipynb
@@ -899,13 +899,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "       Species\n",
+       "Cluster setosa versicolor virginica\n",
+       "      1     50          0         0\n",
+       "      2      0          9        30\n",
+       "      3      0         41        20"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "table(Cluster = clusters, Species = iris$Species)"
    ]
