--- a/Class 2/fitness/fitness.ipynb
+++ b/Class 2/fitness/fitness.ipynb
@@ -750,6 +750,20 @@
      "languageId": "r"
     }
    },
+   "outputs": [],
+   "source": [
+    "\n",
+    "iris_acp$var$cos2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
